--- a/index.html
+++ b/index.html
@@ -2,33 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Calculator v0.1</title>
+    <title>Calculator v0.5</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="http://Learning-Fuze.github.io/calculator/calculator.js"></script>
+    <script>
+        function input_check(type, value, item) {
+            switch (value) {
+                case undefined:
+                    $('.display_screen').html("");
+                    break;
+                default:
+                    $('.display_screen').html(value);
+                    break;
+            }
+        }
+
+        var my_calculator = new calculator(input_check);
+
+        $(document).ready(function () {
+            $('button').on('click', function () {
+                var val = $(this).text();
+                switch (val) {
+                    case 'CE':
+                        my_calculator.allClear();
+                        break;
+                    case 'C':
+                        my_calculator.clear();
+                        break;
+                    default:
+                        my_calculator.addItem($(this).text());
+                        break;
+                }
+            });
+        });
+    </script>
 </head>
 <body>
     <div class="container">
         <div class="display_screen">
-            <input type ="text">
         </div>
         <div class="buttons">
-            <input type="button" value="C" class="button_keys" id="c">
-            <input type="button" value="CE" class="button_keys" id="ce"><br>
-            <input type="button" value="7" class="button_keys">
-            <input type="button" value="8" class="button_keys">
-            <input type="button" value="9" class="button_keys">
-            <input type="button" value="&divide" class="button_keys symbols" >
-            <input type="button" value="4" class="button_keys">
-            <input type="button" value="5" class="button_keys">
-            <input type="button" value="6" class="button_keys">
-            <input type="button" value="x" class="button_keys symbols">
-            <input type="button" value="1" class="button_keys">
-            <input type="button" value="2" class="button_keys">
-            <input type="button" value="3" class="button_keys">
-            <input type="button" value="-" class="button_keys symbols">
-            <input type="button" value="0" class="button_keys">
-            <input type="button" value="." class="button_keys">
-            <input type="button" value="=" class="button_keys" id ="equal">
-            <input type="button" value="+" class="button_keys symbols">
+            <button class="button_keys" id="c">C</button>
+            <button class="button_keys" id="ce">CE</button><br>
+            <button class="button_keys">7</button>
+            <button class="button_keys">8</button>
+            <button class="button_keys">9</button>
+            <button class="button_keys symbols">/</button>
+            <button class="button_keys">4</button>
+            <button class="button_keys">5</button>
+            <button class="button_keys">6</button>
+            <button class="button_keys symbols">x</button>
+            <button class="button_keys">1</button>
+            <button class="button_keys">2</button>
+            <button class="button_keys">3</button>
+            <button class="button_keys symbols">-</button>
+            <button class="button_keys">0</button>
+            <button class="button_keys">.</button>
+            <button class="button_keys" id="equal">=</button>
+            <button class="button_keys symbols">+</button>
         </div>
     </div>
 </body>
