placed switch statement to function calculate

--- a/index.html
+++ b/index.html
@@ -7,29 +7,32 @@
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="main.js"></script>
 </head>
+<header>
+    <h5>Calculator</h5>
+</header>
 <body>
     <div class="container">
         <div class="display_screen">
         </div>
         <div class="buttons">
-            <button class="button_keys" id="clear">C</button>
-            <button class="button_keys" id="clear_all">CE</button><br>
-            <button class="button_keys" id="numbers">7</button>
-            <button class="button_keys" id="numbers">8</button>
-            <button class="button_keys" id="numbers">9</button>
-            <button class="button_keys" id="operators">/</button>
-            <button class="button_keys" id="numbers">4</button>
-            <button class="button_keys" id="numbers">5</button>
-            <button class="button_keys" id="numbers">6</button>
-            <button class="button_keys" id="operators">x</button>
-            <button class="button_keys" id="numbers">1</button>
-            <button class="button_keys" id="numbers">2</button>
-            <button class="button_keys" id="numbers">3</button>
-            <button class="button_keys" id="operators">-</button>
-            <button class="button_keys" id="numbers">0</button>
-            <button class="button_keys" id="numbers">.</button>
-            <button class="button_keys" id="equal">=</button>
-            <button class="button_keys" id="operators">+</button>
+            <button class="button_keys clear">C</button>
+            <button class="button_keys clear_all">CE</button><br>
+            <button class="button_keys numbers">7</button>
+            <button class="button_keys numbers">8</button>
+            <button class="button_keys numbers">9</button>
+            <button class="button_keys operators">/</button>
+            <button class="button_keys numbers">4</button>
+            <button class="button_keys numbers">5</button>
+            <button class="button_keys numbers">6</button>
+            <button class="button_keys operators">x</button>
+            <button class="button_keys numbers">1</button>
+            <button class="button_keys numbers">2</button>
+            <button class="button_keys numbers">3</button>
+            <button class="button_keys operators">-</button>
+            <button class="button_keys numbers">0</button>
+            <button class="button_keys numbers">.</button>
+            <button class="button_keys equal">=</button>
+            <button class="button_keys operators">+</button>
         </div>
     </div>
 </body>
