added conditional statements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="buttons">
             <button class="button_keys clear">C</button>
-            <button class="button_keys clear_all">CE</button><br>
+            <button class="button_keys clear_entry">CE</button><br>
             <button class="button_keys numbers">7</button>
             <button class="button_keys numbers">8</button>
             <button class="button_keys numbers">9</button>
