changed css styling

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Calculator v1.0</title>
+    <title>Calculator</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="main.js"></script>
 </head>
 <header>
-    <h5>Calculator</h5>
 </header>
 <body>
     <div class="container">
