changed button color for operators

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
 </header>
 <body>
-    <div class="container">
+    <div class="calculator">
         <div class="display_screen">
         </div>
         <div class="buttons">
