added media rule for mobile screen

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="main.js"></script>
@@ -14,8 +15,10 @@
         <div class="display_screen">
         </div>
         <div class="buttons">
+            <div class="clear_row">
             <button class="button_keys clear">C</button>
-            <button class="button_keys clear_entry">CE</button><br>
+            </div>
+            <br>
             <button class="button_keys numbers">7</button>
             <button class="button_keys numbers">8</button>
             <button class="button_keys numbers">9</button>
